--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
-    "mongoose": "^5.4.11"
+    "logger": "0.0.1",
+    "mongoose": "^5.4.11",
+    "morgan": "^1.9.1"
   }
 }
